WIP: Mediaqueries done, need to fix tiny text on mobile.

--- a/src/sass/partials/_general.scss
+++ b/src/sass/partials/_general.scss
@@ -20,7 +20,7 @@ body {
   background: #d35400;
   color: white;
 
-  padding: 12px 90px;
+  padding: 40px 90px;
 }
 
 a {
